--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "http://plancarolina.com/",
+  "homepage": "https://wwwx.cs.unc.edu/~kateg/plancarolina",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "react-scripts-ts start",
@@ -14,28 +14,33 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/gapi": "0.0.35",
+    "@types/gapi.auth2": "0.0.44",
     "@types/node": "^8.0.28",
     "@types/react": "^16.0.5",
     "@types/react-dom": "^15.5.4",
+    "@types/react-facebook-login": "^3.6.1",
     "@types/sortablejs": "^1.3.32",
+    "bcrypt": "^1.0.3",
     "fuzzysearch": "^1.0.3",
+    "gapi": "0.0.3",
     "mobx": "^3.2.2",
     "mobx-react": "^4.2.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-facebook-login": "file:react-facebook-login",
+    "react-google-login": "^2.9.3",
     "react-scripts-ts": "^2.6.0",
     "slipjs": "^2.1.0",
     "sortablejs": "^1.6.1",
     "tags-input": "^1.1.1"
   },
-    "proxy": {
+  "proxy": {
     "/api": {
       "target": "https://wwwx.cs.unc.edu/~kateg/plancarolina",
       "secure": true,
       "changeOrigin": true,
       "host": "wwwx.cs.unc.edu"
     }
-  },
-  "homepage": "https://wwwx.cs.unc.edu/~kateg/plancarolina"
+  }
 }
-
