--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "noImplicitAny": true,
     // "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "types": ["gapi", "gapi.auth2"]
   },
   "exclude": [
     "node_modules",
